--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1974,3 +1974,7 @@ button.bg-dark:focus {
 .bg-transparent {
     background-color: transparent !important;
 }
+
+.card .ant-card-body {
+    padding: 0px !important;
+}
