--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -136,7 +136,7 @@ body,
 }
 
 .shadow {
-    box-shadow: 0 0.5rem 1rem rgba(0,21,41,.08) !important;
+    box-shadow: 0 0.5rem 1rem rgba(0, 21, 41, .08) !important;
 }
 
 .shadow-lg {
@@ -1831,8 +1831,16 @@ a.text-dark:focus {
     color: rgba(0, 0, 0, 0.5) !important;
 }
 
+.text-black-30 {
+    color: rgba(0, 0, 0, 0.3) !important;
+}
+
 .text-white-50 {
     color: rgba(255, 255, 255, 0.5) !important;
+}
+
+.text-white-50 {
+    color: rgba(255, 255, 255, 0.7) !important;
 }
 
 .text-hide {
@@ -1977,4 +1985,16 @@ button.bg-dark:focus {
 
 .card .ant-card-body {
     padding: 0px !important;
+}
+
+.media {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: start;
+    align-items: flex-start;
+}
+
+.media-body {
+    -ms-flex: 1;
+    flex: 1;
 }
